# SqliteImgDoc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  SqliteImgDoc.sln
CmdSqliteImgDoc/: CMakeLists.txt  CmdSqliteImgDoc.cpp
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  notes.txt
ConvCZI/: CMakeLists.txt  cmdlineopts.cpp  cmdlineopts.h  convczi.cpp  inc_libczi.h  utils.cpp  utils.h
Snippets/: queries.txt
SqliteImgDoc/: BlobOnHeap.cpp  CCustomQueries.cpp  CCustomQueries.h  CMakeLists.txt  DataBinHdr.h  DataObjImpl.h  DataTypes.h  Db.cpp  Db.h  DbBase.cpp  DbBase.h  DbCreation.cpp  DbCreation.h  DbDiscover.cpp  DbDiscover.h  DbGlobalInfo.cpp  DbGlobalInfo.h  DbRead.cpp  DbRead.h  DbWrite.cpp  DbWrite.h  DimCoordinateQueryClause.h  Doxyfile  IBlob.h  IDataObj.h  IDimCoordinateQueryClause.h  ImportExport.h  Interface.h  LogicalPositionInfo.h  SqliteImgDoc.vcxproj  SqliteImgDoc.vcxproj.filters  SubBlkCoordinate.h  TileCoordinate.h  Types.h  utilities.h
SqliteImgDoc/src/: BlobOnHeap.cpp  CCustomQueries.cpp  CCustomQueries.h  CoordinateData.cpp  Db.cpp  Db.h  DbBase.cpp  DbBase.h  DbCreation.cpp  DbCreation.h  DbCreation3D.cpp  DbCreation3D.h  DbCreationCommon.h  DbDiscover.cpp  DbDiscover.h  DbGlobalInfo.cpp  DbGlobalInfo.h  DbGlobalInfo3D.cpp  DbGlobalInfo3D.h  DbMasterInfoTable.cpp  DbMasterInfoTable.h  DbRead.cpp  DbRead.h  DbRead3D.cpp  DbRead3D.h  DbReadCommon.h  DbWrite.cpp  DbWrite.h  DbWrite3D.cpp  DbWrite3D.h  DbWriteBase.cpp  DbWriteBase.h  IInternalDb.h  QueryBuildUtils.cpp  QueryBuildUtils.h  dbutils.cpp  dbutils.h  framework.h  miscutilities.cpp  miscutilities.h
SqliteImgDocBenchmark/: CMakeLists.txt  benchmarkitem.h  commandlineoptions.cpp  commandlineoptions.h  inc_sqliteimgdoc.h  main.cpp  testCase1.cpp  testCase1.h  testCase2.cpp  testCase2.h  testCase3.cpp  testCase3.h  utils.cpp  utils.h
SqliteImgDocTests/: CMakeLists.txt  CustomQueriesTests.cpp  DbCreateDbTests.cpp  DbDiscoverTests.cpp  IndexTests.cpp  PerTilesDataTests.cpp  QueryBuildUtilsTests.cpp  ReadSpatialAndOtherClausesTests.cpp  ReadTests.cpp  SpatialBrickReadTests.cpp  SpatialQueryNoSpatialIndex.cpp  SpatialReadTests.cpp  SqliteImgDocTests.vcxproj  TileCoordinateTests.cpp  pch.h  testUtilities.cpp  testUtilities.h  utilitiesTests.cpp
extlibs/SQLite3.30.1/: CMakeLists.txt
extlibs/SQLiteCpp/: CHANGELOG.md  README.md  build.bat
extlibs/libCZI/Src/: CMakeLists.txt
extlibs/libCZI/Src/libCZI/: CMakeLists.txt
extlibs/sqlite3/: CMakeLists.txt
